syntax = "proto3";

package br.com.coregate.infrastructure;

import "common/coregate-context.proto";

option java_multiple_files = true;
option java_package = "br.com.coregate.proto.rules";
option java_outer_classname = "RulesProto";


// =======================================================
// üßæ Transaction Fact (Orquestrator ‚Üí Rules Engine)
// =======================================================
message TransactionFactProto {
    string requestIdd = 1;
    string pan = 2;
    string merchantId = 3;
    string mcc = 4;
    string country = 5;
    bool online = 6;
    int64 amountCents = 7;
    double riskScore = 8;
    bool mccBlacklisted = 9;
    bool mccWhitelisted = 10;
    bool mccGambling = 11;
    bool gamblingAllowed = 12;
    bool amountAutoApproves = 13;
    bool riskOk = 14;
    bool panExceedsVelocity = 15;
    bool panExceedsDailyLimit = 16;
    string tenantId = 17;
}

// =======================================================
// üß† Decis√£o do Rules Engine
// =======================================================
enum DecisionOutcome {
    DECISION_OUTCOME_UNSPECIFIED = 0;
    APPROVED = 1;
    DECLINED = 2;
    REVIEW = 3;
}

message StandinDecision {
    DecisionOutcome outcome = 1;
    string reason = 2;
    string authCode = 3;
    string requestId = 4;
}

// =======================================================
// üì§ Orquestrator ‚Üí Rules Engine
// =======================================================
message RulesRequestProto {
    CoreGateContext coreGateContext = 1;
    TransactionFactProto transactionFactProto = 2;
    int64 sentAtEpochMs = 3;
}

// =======================================================
// üì• Rules Engine ‚Üí Orquestrator
// =======================================================
message RulesResponseProto {
    CoreGateContext coreGateContext = 1;
    StandinDecision decision = 2;
    int64 evaluatedAtEpochMs = 3;
}

// =======================================================
// üõ∞Ô∏è Servi√ßo gRPC
// =======================================================
service RulesProtoService {
    rpc Evaluate (RulesRequestProto) returns (RulesResponseProto);
}
